# awedio_esp32

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
src/: lib.rs
